--- a/vscode/extension/src/index.html
+++ b/vscode/extension/src/index.html
@@ -1,20 +1,4 @@
-// Copyright (c) 2019 WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
-//
-// WSO2 Inc. licenses this file to you under the Apache License,
-// Version 2.0 (the "License"); you may not use this file except
-// in compliance with the License.
-// You may obtain a copy of the License at
-//
-// http://www.apache.org/licenses/LICENSE-2.0
-//
-// Unless required by applicable law or agreed to in writing,
-// software distributed under the License is distributed on an
-// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-// KIND, either express or implied.  See the License for the
-// specific language governing permissions and limitations
-// under the License.
-
-export let begin: string = `<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -23,12 +7,13 @@ export let begin: string = `<!DOCTYPE html>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./lib/Skeleton-2.0.4/css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="./lib/Skeleton-2.0.4/css/skeleton.css">
-    <link rel="stylesheet" type="text/css" href="./css/styles.css">
+    <link rel="stylesheet" href="lib/Skeleton-2.0.4/css/normalize.css">
+    <link rel="stylesheet" href="lib/Skeleton-2.0.4/css/skeleton.css">
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
+
 <div class="container">
     <div class="row">
         <div class="one-half column">
@@ -37,7 +22,7 @@ export let begin: string = `<!DOCTYPE html>
     </div>
     <div class="row">
         <div class="three columns button-section">
-            <a href="" onclick="pickTemplate('new_project')">
+            <a href="">
                 <div class="create">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 57 60">
                         <defs></defs>
@@ -59,7 +44,7 @@ export let begin: string = `<!DOCTYPE html>
 
         </div>
         <div class="three columns button-section">
-            <a href="https://github.com/wso2/ballerina-integrator/blob/master/docs/getting-started/quick-start-guide.md">
+            <a href="">
                 <div class="create">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                         <path d="M268.66,243.35a10,10,0,1,0,0,14.14A10,10,0,0,0,268.66,243.35ZM395.93,116.07a50,50,0,
@@ -96,7 +81,7 @@ export let begin: string = `<!DOCTYPE html>
             </a>
         </div>
         <div class="four columns button-section">
-            <a href="https://github.com/wso2/ballerina-integrator/tree/master/docs/learn">
+            <a href="">
                 <div class="create">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 612 612">
                         <path class="cls-1" d="M230.72,181.21l-5.12,5.51ZM337,200.88q11.94,14.69,11.91,34.63A51.92,
@@ -129,8 +114,38 @@ export let begin: string = `<!DOCTYPE html>
                       transform="translate(-0.05)"/>
             </svg>
         </div>
-    </div>`;
+    </div>
+    <div class="row">
+        <div class="templates">
+            <div class="three columns">
+                <div class="box">
 
-export let end: string = `
-        </body>
-    </html>`;
+                </div>
+            </div>
+            <div class="three columns">
+                <div class="box">
+
+                </div>
+            </div>
+            <div class="three columns">
+                <div class="box">
+
+                </div>
+            </div>
+            <div class="three columns">
+                <div class="box">
+
+                </div>
+            </div>
+            <div class="three columns">
+                <div class="box">
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+</body>
+
+</html>
